test/langtools/tools/javac/T8320144.out
T8320144.java:16:54: compiler.err.new.not.allowed.in.annotation
1 error
